fix comment/video overlap in movie night

--- a/app/assets/stylesheets/video.css
+++ b/app/assets/stylesheets/video.css
@@ -7,7 +7,6 @@
 
 .video-in-mast {
   margin: auto;
-  min-width: 944px;
   width: 75%;
   height: 95%;
   align-self: flex-start;
@@ -18,6 +17,10 @@
   font-size: 22px;
   display: flex;
   align-items: flex-start;
+}
+
+.video-in-mast.min-width {
+  min-width: 944px;
 }
 
 .logged-out-roadblock {
